--- a/public/style/styles.css
+++ b/public/style/styles.css
@@ -571,6 +571,31 @@ dl.zend_form dd dt {
   background: linear-gradient(top, #494b4e 0%,#3d4046 100%);
   color: #fff;
 }
+
+.smork-btn.light a,
+.smork-btn.light a:visited {
+  background: #484C51;
+  background: -moz-linear-gradient(top, #efefef 0%, #dfdddd 100%);
+  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#efefef), color-stop(100%,#dfdddd));
+  background: -webkit-linear-gradient(top, #efefef 0%,#dfdddd 100%);
+  background: -o-linear-gradient(top, #efefef 0%,#dfdddd 100%);
+  background: -ms-linear-gradient(top, #efefef 0%,#dfdddd 100%);
+  background: linear-gradient(top, #efefef 0%,#dfdddd 100%);
+  color: #323232;
+}
+
+.smork-btn.light a:hover { 
+  background: #484C51;
+  background: -moz-linear-gradient(top, #494b4e 0%, #3d4046 100%);
+  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#494b4e), color-stop(100%,#3d4046));
+  background: -webkit-linear-gradient(top, #494b4e 0%,#3d4046 100%);
+  background: -o-linear-gradient(top, #494b4e 0%,#3d4046 100%);
+  background: -ms-linear-gradient(top, #494b4e 0%,#3d4046 100%);
+  background: linear-gradient(top, #494b4e 0%,#3d4046 100%);
+  color: #fff;
+}
+
+
 .zend_form input[type='submit']:active,
 smork-btn a:active { top: 1px; }
 
@@ -830,6 +855,9 @@ smork-btn a:active { top: 1px; }
   font-size: 9pt;
 }
 
+.smork-btn {
+  display: inline-block;
+}
 .smork-btn a span, .smork-btn:visited a span {
   background: no-repeat left;
   padding: 1px 0 1px 22px;
@@ -845,6 +873,46 @@ smork-btn a:active { top: 1px; }
 
 .smork-btn.simtext-compare-icon a span, .smork-btn.simtext-compare-icon:visited a span {
   background: url(/images/icons/page_copy.png) no-repeat left;
+}
+
+.smork-btn.comments-icon a span, .smork-btn.comments-icon:visited a span {
+  background: url(/images/icons/comments.png) no-repeat left;
+}
+
+.smork-btn.user-icon a span, .smork-btn.user-icon:visited a span {
+  background: url(/images/icons/user.png) no-repeat left;
+}
+
+.smork-btn.case-icon a span, .smork-btn.case-icon:visited a span {
+  background: url(/images/icons/book.png) no-repeat left;
+}
+
+.smork-btn.comment-icon a span, .smork-btn.comment-icon:visited a span {
+  background: url(/images/icons/comment.png) no-repeat left;
+}
+
+.smork-btn.document-icon a span, .smork-btn.document-icon:visited a span {
+  background: url(/images/icons/script.png) no-repeat left;
+}
+
+.smork-btn.file-icon a span, .smork-btn.file-icon:visited a span {
+  background: url(/images/icons/download.png) no-repeat left;
+}
+
+.smork-btn.notification-icon a span, .smork-btn.notification-icon:visited a span {
+  background: url(/images/icons/clock.png) no-repeat left;
+}
+
+.smork-btn.tag-icon a span, .smork-btn.tag-icon:visited a span {
+  background: url(/images/icons/tag_blue.png) no-repeat left;
+}
+
+.smork-btn.document-page-icon a span, .smork-btn.document-page-icon:visited a span {
+  background: url(/images/icons/page.png) no-repeat left;
+}
+
+.smork-btn.report-icon a span, .smork-btn.report-icon:visited a span {
+  background: url(/images/icons/report.png) no-repeat left;
 }
 
 /* pagination controls */
@@ -897,8 +965,110 @@ smork-btn a:active { top: 1px; }
   color: #ffffff;
 }
 
+#activity-stream {
+
+}
+
+#activity-stream .activity {
+  border-bottom: 1px #EFEFEF solid;
+  padding: 10px;
+}
+
+#activity-stream .activity:hover {
+  background-color: #dcebff;
+}
+
+#activity-stream .activity .image {
+  width: 80px;
+  position: absolute;
+}
+
+#activity-stream .activity .details {
+  margin-left: 80px;
+  min-height: 60px;
+}
+
+#activity-stream .activity .title h4 {
+  margin: 0;
+  padding: 0;
+  display: inline-block;
+  font-size: 13px;
+}
+
+#activity-stream .activity .title h4 span {
+  font-weight: normal;
+  color: #888C95;
+}
+
+#activity-stream .activity .title .date {
+  color: #A4A2A2;
+  display: inline-block;
+  float: right;
+}
+
+#activity-stream .activity .details p {
+  padding: 0;
+  margin: 0;
+  font-size: 12px;
+}
+
+#activity-stream .activity-more {
+  background-color: #efefef;
+  position: relative;
+  display: none;
+}
+
+#activity-stream .activity-more .settings  {
+  background-color: #efefef;
+  color: white;
+  font-size: 12px;
+  padding: 15px 10px 5px 10px;
+  padding-left: 90px;
+}
+
+#activity-stream .activity-more .settings .arrow-down {
+  position: absolute;
+  width: 0;
+  border-left: 10px solid transparent;
+  border-right: 10px solid transparent;
+  border-top: 10px solid white;
+  border-bottom: 0;
+  margin-top: -16px;
+  margin-left: 15px;
+}
 
 
+
+#activity-stream .activity-more .comment-field {
+  font-size: 10px;
+  border: 1px #888C95 solid;
+  width: 200px;
+  padding: 4px;
+}
+
+#activity-stream .activity-more .comments-loading {
+  display: none;
+  padding: 10px;
+  text-align: center;
+}
+
+#activity-stream .activity-more .comments .comment,
+#activity-stream .activity-more .write-comment-box {
+  border-bottom: 1px white solid;
+  padding: 10px 10px 10px 90px;
+}
+
+#activity-stream .activity-more .comments .comment .image {
+    width: 50px;
+  position: absolute;
+}
+#activity-stream .activity-more .comments .comment .details {
+    margin-left: 50px;
+  min-height: 50px;
+}
+#activity-stream .activity-more .comments .comment .details .date {
+  color: #a4a2a2;
+}
 /* ==|== non-semantic helper classes ======================================== */
 .ir { display: block; border: 0; text-indent: -999em; overflow: hidden; background-color: transparent; background-repeat: no-repeat; text-align: left; direction: ltr; }
 .ir br { display: none; }
