--- a/public/style/styles.css
+++ b/public/style/styles.css
@@ -1121,13 +1121,12 @@ smork-btn a:active { top: 1px; }
   font-size: 12px;
 }
 
-#activity-stream .activity-more {
+.comments-wrapper {
   background-color: #efefef;
   position: relative;
-  display: none;
 }
 
-#activity-stream .activity-more .settings  {
+.comments-wrapper .settings  {
   background-color: #efefef;
   color: white;
   font-size: 12px;
@@ -1135,7 +1134,7 @@ smork-btn a:active { top: 1px; }
   padding-left: 90px;
 }
 
-#activity-stream .activity-more .settings .arrow-down {
+.comments-wrapper .settings .arrow-down {
   position: absolute;
   width: 0;
   border-left: 10px solid transparent;
@@ -1146,36 +1145,34 @@ smork-btn a:active { top: 1px; }
   margin-left: 15px;
 }
 
-
-
-#activity-stream .activity-more .comment-field {
+.comments-wrapper .comment-field {
   font-size: 10px;
   border: 1px #888C95 solid;
   width: 200px;
   padding: 4px;
 }
 
-#activity-stream .activity-more .comments-loading {
+.comments-wrapper .comments-loading {
   display: none;
   padding: 10px;
   text-align: center;
 }
 
-#activity-stream .activity-more .comments .comment,
-#activity-stream .activity-more .write-comment-box {
+.comments-wrapper .comments .comment,
+.comments-wrapper .write-comment-box {
   border-bottom: 1px white solid;
   padding: 10px 10px 10px 90px;
 }
 
-#activity-stream .activity-more .comments .comment .image {
+.comments-wrapper .comments .comment .image {
     width: 50px;
   position: absolute;
 }
-#activity-stream .activity-more .comments .comment .details {
+.comments-wrapper .comments .comment .details {
     margin-left: 50px;
   min-height: 50px;
 }
-#activity-stream .activity-more .comments .comment .details .date {
+.comments-wrapper .comments .comment .details .date {
   color: #a4a2a2;
 }
 /* ==|== non-semantic helper classes ======================================== */
@@ -1188,7 +1185,6 @@ smork-btn a:active { top: 1px; }
 .clearfix:before, .clearfix:after { content: ""; display: table; }
 .clearfix:after { clear: both; }
 .clearfix { zoom: 1; }
-
 
 /* ==|== media queries ====================================================== */
 
