--- a/application/layouts/scripts/layout.phtml
+++ b/application/layouts/scripts/layout.phtml
@@ -23,7 +23,7 @@ $cases = $results;
 
 ?>
 <?php echo $this->partial('partials/header.phtml', array('defaultNamespace'=>$defaultNamespace, 'me'=>$me, 'cases'=>$cases)); ?>
-<div role="main" id="content" class="clearfix">
+<div role="main" class="clearfix">
   <?php echo $this->partial('partials/messages.phtml', array('defaultNamespace'=>$defaultNamespace, 'flashMessages'=>$this->flashMessages)); ?>
   <h2><?php echo $this->escape($this->title); ?></h2>
   <div class="main">
