Fixed wrong colour in login "or"

--- a/application/layouts/scripts/partials/header.phtml
+++ b/application/layouts/scripts/partials/header.phtml
@@ -51,7 +51,7 @@
             </div>
           </div>
         <?php else: ?>
-          <div>
+          <div class="login-register-box">
             <a href="/user/register"><?php echo $this->translate("Register now"); ?></a>
             <span><?php echo $this->translate('or') . ' '; ?></span>
             <a href="/auth/login"><?php echo $this->translate("login"); ?></a>
