--- a/application/views/scripts/file/list.phtml
+++ b/application/views/scripts/file/list.phtml
@@ -1,20 +1,21 @@
 <?php
-$this->title = $this->translate('Uploaded files');
-$this->headTitle($this->title);
+
 ?>
 <table cellpadding="0" cellspacing="0" class="default">
-  <tr>
-    <th style="width: 20px;">&nbsp;</th>
-    <th><?php echo $this->translate("Filename"); ?></th>
-    <th style="width: 110px;"><?php echo $this->translate("Uploaded"); ?></th>
-    <th style="width: 100px;"><?php echo $this->translate("Actions"); ?></th>
-  </tr>
-
+  <thead>
+    <tr>
+      <th style="width: 20px;"></th>
+      <th><?php echo $this->translate("Filename"); ?></th>
+      <th style="width: 110px;"><?php echo $this->translate("Uploaded"); ?></th>
+      <th style="width: 100px;"><?php echo $this->translate("Actions"); ?></th>
+    </tr>
+  <thead>
+  <tbody>
   <?php $i = 0; ?>
   <?php foreach($this->paginator as $file): ?>
     <tr <?php echo ($i++ % 2 == 0) ? 'class="even"' : ""; ?>>
       <td>
-          <img class="icon" src="<?php echo $this->baseUrl('images/icons/' . Unplagged_Helper::getFileIconByExtenstion($file->getExtension()));?>" />
+          <img class="icon" src="<?php echo $this->baseUrl('images/icons/' . Unplagged_Helper::getFileIconByExtension($file->getExtension()));?>" />
       </td>
       <td>
           <a <?php if($file->isImage()){ echo 'class="picture"'; } ?> href="<?php echo $this->baseUrl('/image/view/id/' . $file->getId());?>">          
@@ -22,17 +23,24 @@ $this->headTitle($this->title);
           </a>
       </td>
       <td><?php echo $file->getCreated()->format('Y-m-d'); ?></td>
-      <td><?php if($file->getIsTarget()){ ?>
+      <td><?php if($file->getIsTarget()): ?>
           <a href="<?php echo "/file/unset-target/id/" . $file->getId(); ?>"><img class="icon" src="<?php echo $this->baseUrl('images/icons/page_find.png'); ?>" title="<?php echo $this->translate("unset target"); ?>" /></a>
-        <?php }else{ ?>
+        <?php else: ?>
           <a href="<?php echo "/file/set-target/id/" . $file->getId(); ?>" class="target"><img class="icon" src="<?php echo $this->baseUrl('images/icons/page.png'); ?>" title="<?php echo $this->translate("set target"); ?>" /></a>
-        <?php } ?>
+        <?php endif; ?>
         <a href="<?php echo "/file/parse/id/" . $file->getId(); ?>"><img class="icon" src="<?php echo $this->baseUrl('images/icons/page_gear.png'); ?>" title="<?php echo $this->translate("parse"); ?>" /></a>
         <a href="<?php echo "/file/download/id/" . $file->getId(); ?>"><img class="icon" src="<?php echo $this->baseUrl('images/icons/disk.png'); ?>" title="<?php echo $this->translate("download"); ?>" /></a>
         <a href="<?php echo "/file/delete/id/" . $file->getId(); ?>"><img class="icon" src="<?php echo $this->baseUrl('images/icons/delete.png'); ?>" title="<?php echo $this->translate("delete"); ?>" /></a>
+        <?php if(Zend_Controller_Front::getInstance()->getRequest()->getControllerName() !== 'user'): ?>
+          <a href="<?php echo "/user/add-file/id/" . $file->getId(); ?>"><img class="icon" src="<?php echo $this->baseUrl('images/icons/basket_put.png'); ?>" title="<?php echo $this->translate("Add to personal files"); ?>" /></a>
+        <?php endif; ?>
+        <?php if(Zend_Controller_Front::getInstance()->getRequest()->getControllerName() !== 'case'): ?>
+          <a href="<?php echo "/case/add-file/id/" . $file->getId(); ?>"><img class="icon" src="<?php echo $this->baseUrl('images/icons/package_add.png'); ?>" title="<?php echo $this->translate("Add to current case"); ?>" /></a>
+          <?php endif; ?>
       </td>
     </tr>
   <?php endforeach; ?>
+  </tbody>
 </table>
 <?php echo $this->paginationControl($this->paginator, 'Sliding', 'pagination-control.phtml'); ?>
 
