--- a/public/style/styles.css
+++ b/public/style/styles.css
@@ -103,21 +103,37 @@ p {
   height: 40px;
 }
 
-.button{
-  padding: 0 3px;
-  display: inline-block;
-  border: 1px outset #c5c5c5;
-  background-color: #f5f5f5;
-  -webkit-border-radius: 3px;
-  -moz-border-radius: 3px;
-  border-radius: 3px;
+.button{  
+  background-color: #ffffff;
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='#eeeeee', GradientType=0 );   
+  background-image: -webkit-gradient(linear, 0% 0%, 0% 100%, color-stop(20%, #ffffff), color-stop(50%, #f6f6f6), color-stop(52%, #eeeeee), color-stop(100%, #f4f4f4));
+  background-image: -webkit-linear-gradient(top, #ffffff 20%, #f6f6f6 50%, #eeeeee 52%, #f4f4f4 100%);
+  background-image: -moz-linear-gradient(top, #ffffff 20%, #f6f6f6 50%, #eeeeee 52%, #f4f4f4 100%);
+  background-image: -o-linear-gradient(top, #ffffff 20%, #f6f6f6 50%, #eeeeee 52%, #f4f4f4 100%);
+  background-image: -ms-linear-gradient(top, #ffffff 20%, #f6f6f6 50%, #eeeeee 52%, #f4f4f4 100%);
+  background-image: linear-gradient(top, #ffffff 20%, #f6f6f6 50%, #eeeeee 52%, #f4f4f4 100%); 
+  -webkit-border-radius: 5px;
+  -moz-border-radius   : 5px;
+  border-radius        : 5px;
+  -moz-background-clip   : padding;
+  -webkit-background-clip: padding-box;
+  background-clip        : padding-box;
+  border: 1px solid #aaaaaa;
+  -webkit-box-shadow: 0 0 3px #ffffff inset, 0 1px 1px rgba(0,0,0,0.1);
+  -moz-box-shadow   : 0 0 3px #ffffff inset, 0 1px 1px rgba(0,0,0,0.1);
+  box-shadow        : 0 0 3px #ffffff inset, 0 1px 1px rgba(0,0,0,0.1);
+  display: block;
+  overflow: hidden;
+  white-space: nowrap;
+  position: relative;
+  line-height: 24px;
+  padding: 0 0 0 8px;
+  color: #444444;
   text-decoration: none;
-  line-height: 22px;  
-  color: #8B8F91;
 }
 
-.button:hover {
-  border-style: solid;
+.ie9 .button {
+  border-radius: 0;
 }
 
 .button .arrow-down {
@@ -126,13 +142,13 @@ p {
   margin-bottom: 2px;
   padding-right: 18px;
   height: 18px;
-  background: url(../images/arrow-down.png) no-repeat right -4px transparent;
+  background: url(../images/chosen-sprite.png) no-repeat 0 -3px;
   border-left: 1px solid #d5d5d5;
   vertical-align: bottom;
 }
 
 .button:hover .arrow-down{
-  background-position: right -27px;
+  background-position: -18px -3px;
 }
 
 .target {
@@ -209,7 +225,7 @@ header[role=toolbar] a:hover{
 }
 
 .user-menu:hover .arrow-down{
-  background-position: right -27px;
+  background-position: -18px -3px;
 }
 
 .user-menu ul { 
@@ -218,7 +234,7 @@ header[role=toolbar] a:hover{
   background: whiteSmoke;
   border: 1px solid #c5c5c5;
   z-index: 1000;
-  top: 28px; /* top: 100%; would be nicer, but doesn't work due to line-height */
+  top: 100%; 
   -webkit-border-radius: 2px;
   -moz-border-radius: 2px;
   border-radius: 2px;
@@ -1241,7 +1257,6 @@ smork-btn a:active { top: 1px; }
   position: relative;
   /* Removed display: inline-block; here, because Firefox had problems */ 
   zoom: 1;
-  *display: inline;
 }
 .chzn-container .chzn-drop {
   background: #fff;
@@ -1282,11 +1297,13 @@ smork-btn a:active { top: 1px; }
   overflow: hidden;
   white-space: nowrap;
   position: relative;
-  height: 23px;
   line-height: 24px;
   padding: 0 0 0 8px;
   color: #444444;
   text-decoration: none;
+}
+.ie9 .chzn-container-single .chzn-single {
+  border-radius: 0;
 }
 .chzn-container-single .chzn-default {
   color: #999;
