Beginnings for drop upload and better styling for user menu

--- a/application/layouts/scripts/partials/header.phtml
+++ b/application/layouts/scripts/partials/header.phtml
@@ -1,6 +1,5 @@
 <!doctype html>
-<!--[if lt IE 7]> <html class="no-js ie6 oldie"> <![endif]-->
-<!--[if IE 7]> <html class="no-js ie7 oldie"> <![endif]-->
+<!--[if lte IE 7]> <html class="no-js ie7 oldie"> <![endif]-->
 <!--[if IE 8]> <html class="no-js ie8 oldie"> <![endif]-->
 <!--[if IE 9]> <html class="no-js ie9"> <![endif]-->
 <!--[if gt IE 8]><!--> <html class="no-js"> <!--<![endif]-->
