--- a/application/views/scripts/file/upload.phtml
+++ b/application/views/scripts/file/upload.phtml
@@ -2,6 +2,7 @@
     $this->title = $this->translate("Upload a file");
     $this->headTitle($this->title);
 ?>
+<div class="drop-area"></div>
 <?php
    echo $this->form;
 ?>
