--- a/application/layouts/scripts/partials/header.phtml
+++ b/application/layouts/scripts/partials/header.phtml
@@ -44,8 +44,8 @@
           </div>
           <div class="user-box">
             <img class="avatar" src="<?php echo $this->me->getAvatar(); ?>" />
-            <div class="user-menu">
-              <a class="button" href="/user/edit"><span><?php echo $this->me->getUsername(); ?></span><span class="arrow-down"></span></a>
+            <div class="dropdown-button user-menu">
+              <a class="button" href="/user/edit"><?php echo $this->me->getUsername(); ?><span class="arrow-down"></span></a>
               <ul>
                 <li><a href="/auth/logout"><?php echo $this->translate("Logout"); ?></a></li>
                 <li><a href="/user/edit"><?php echo $this->translate("Edit Profile"); ?></a></li>
