--- a/application/layouts/scripts/partials/header.phtml
+++ b/application/layouts/scripts/partials/header.phtml
@@ -44,7 +44,7 @@
           </div>
           <div class="user-box">
             <img class="avatar" src="<?php echo $this->me->getAvatar(); ?>" />
-            <div class="dropdown-button user-menu">
+            <div class="dropdown-button hoverable user-menu">
               <a class="button" href="/user/edit"><?php echo $this->me->getUsername(); ?><span class="arrow-down"></span></a>
               <ul>
                 <li><a href="/auth/logout"><?php echo $this->translate("Logout"); ?></a></li>
